<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/questionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_one"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonOneA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_a_answer" />

        <RadioButton
            android:id="@+id/radioButtonOneB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_b_answer" />

        <RadioButton
            android:id="@+id/radioButtonOneC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_c_answer" />

        <RadioButton
            android:id="@+id/radioButtonOneD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_d_answer" />
    </RadioGroup>

    <TextView
        android:id="@+id/questionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_two"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_one_a_answer" />


        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_one_b_answer" />


        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_one_c_answer" />


        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_one_d_answer" />

        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_one_e_answer" />


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:background="@color/purple_200"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:background="@color/teal_700"
            android:layout_marginTop="10dp"

            />
    </LinearLayout>




</LinearLayout>
